--- a/project/res/layout/fragment_tablet_checkout_forms.xml
+++ b/project/res/layout/fragment_tablet_checkout_forms.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <!-- Overview of all checkout information: logged in user, travelers, payment -->
 
@@ -10,15 +10,26 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/checkout_forms_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="32dp"
-            android:paddingRight="32dp">
+            android:orientation="vertical">
 
-            <!-- TabletCheckoutFormsFragment builds the checkout forms inside here, dynamically -->
+            <LinearLayout
+                android:id="@+id/checkout_forms_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp">
 
+                <!-- TabletCheckoutFormsFragment builds the checkout forms inside here, dynamically -->
+
+            </LinearLayout>
+
+            <com.expedia.bookings.widget.SizeCopyView
+                android:id="@+id/slide_container_size_copy_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" />
         </LinearLayout>
     </ScrollView>
 
@@ -34,7 +45,7 @@
             android:id="@+id/overlay_shade"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#BB000000"/>
+            android:background="#BB000000" />
 
         <FrameLayout
             android:id="@+id/overlay_content_container"
@@ -47,13 +58,13 @@
                 android:id="@+id/traveler_form_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="invisible"/>
+                android:visibility="invisible" />
 
             <FrameLayout
                 android:id="@+id/payment_form_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="invisible"/>
+                android:visibility="invisible" />
         </FrameLayout>
     </FrameLayout>
 
