Extend checkout form shade.
When we open the checkout forms we have a darkened overlay, but it wasn't going to the bottom
of the page which looked stupid.

--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -115,7 +115,7 @@
                 <FrameLayout
                     android:id="@+id/checkout_forms_container"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="top"/>
 
                 <FrameLayout
