Remove most code usages of ActionBarSherlock
Except `ActionBarSherlockCompat.loadUiOptionsFromManifest()`. OMG

--- a/project/res/values/bools.xml
+++ b/project/res/values/bools.xml
@@ -6,4 +6,7 @@
 
     <bool name="ldpi">false</bool>
 
+    <!-- Had to copy this from ActionBarSherlock -->
+    <bool name="abs__split_action_bar_is_narrow">true</bool>
+
 </resources>
