--- a/project/res/layout/fragment_checkout_payment_button.xml
+++ b/project/res/layout/fragment_checkout_payment_button.xml
@@ -115,15 +115,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:layout_marginLeft="33dp"
+            android:layout_marginLeft="31dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/bg_price_alert_arrow" />
+            android:src="@drawable/bg_tablet_lcc_price_arrow" />
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/credit_card_fees_message_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#919091"
+            android:background="#99424242"
             android:gravity="center"
             android:padding="5dp"
             android:textColor="@android:color/white" />
