2821. Trip Bucket prices for hotels must indicate per night2821. Trip Bucket prices for hotels must indicate per night

--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -1092,4 +1092,9 @@
         <item name="android:background">@drawable/bg_tablet_room_rate_more_info</item>
     </style>
 
+    <!-- For Trip bucket, hotel /night text -->
+    <style name="TripBucketHotelPerNight">
+        <item name="android:textSize">15sp</item>
+    </style>
+
 </resources>
