Removing ABS themes and junk
Copying some drawables and colors over from ABS too.

--- a/project/res/layout/action_bar_flight_results.xml
+++ b/project/res/layout/action_bar_flight_results.xml
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cancel"
-                android:textAppearance="?attr/actionMenuTextAppearance"
+                android:textAppearance="?android:attr/actionMenuTextAppearance"
                 android:textColor="#E9E9E9" />
         </LinearLayout>
 
@@ -88,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/select_flight"
-                android:textAppearance="?attr/actionMenuTextAppearance"
+                android:textAppearance="?android:attr/actionMenuTextAppearance"
                 android:textColor="?attr/actionBarButtonTextColor" />
         </LinearLayout>
     </LinearLayout>
