--- a/project/res/layout/fragment_itinerary_list.xml
+++ b/project/res/layout/fragment_itinerary_list.xml
@@ -12,7 +12,7 @@
     <View
         android:id="@+id/spacer_view"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize" />
+        android:layout_height="?android:attr/actionBarSize" />
 
     <!-- The listview -->
 
