--- a/project/res/layout/fragment_launch.xml
+++ b/project/res/layout/fragment_launch.xml
@@ -8,7 +8,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize" />
+        android:layout_height="?android:attr/actionBarSize" />
 
     <include
         android:layout_width="match_parent"
