--- a/project/res/layout/header_done_btn.xml
+++ b/project/res/layout/header_done_btn.xml
@@ -8,8 +8,8 @@
     android:drawableLeft="?attr/actionBarCheckMarkDrawable"
     android:focusable="true"
     android:gravity="center_vertical"
-    android:minHeight="?attr/actionBarSize"
+    android:minHeight="?android:attr/actionBarSize"
     android:paddingRight="@dimen/yoyo_navigation_padding_right"
     android:text="@string/button_done"
-    android:textAppearance="?attr/actionMenuTextAppearance"
+    android:textAppearance="?android:attr/actionMenuTextAppearance"
     android:textColor="?attr/actionBarButtonTextColor" />
