--- a/project/res/layout/header_next_btn.xml
+++ b/project/res/layout/header_next_btn.xml
@@ -7,8 +7,8 @@
     android:drawableLeft="?attr/actionBarCheckoutDrawable"
     android:focusable="true"
     android:gravity="center_vertical"
-    android:minHeight="?attr/actionBarSize"
+    android:minHeight="?android:attr/actionBarSize"
     android:paddingRight="@dimen/yoyo_navigation_padding_right"
     android:text="@string/next"
-    android:textAppearance="?attr/actionMenuTextAppearance"
+    android:textAppearance="?android:attr/actionMenuTextAppearance"
     android:textColor="?attr/actionBarButtonTextColor" />
