--- a/project/res/layout/header_search_btn2.xml
+++ b/project/res/layout/header_search_btn2.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:minHeight="?attr/actionBarSize"
+    android:minHeight="?android:attr/actionBarSize"
     android:orientation="horizontal"
     android:focusable="true"
     android:paddingLeft="8dp"
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/search"
-        android:textAppearance="?attr/actionMenuTextAppearance"
+        android:textAppearance="?android:attr/actionMenuTextAppearance"
         android:textColor="#e1e3e5" />
 
 </LinearLayout>
