--- a/project/res/layout/widget_image_dropdown.xml
+++ b/project/res/layout/widget_image_dropdown.xml
@@ -14,6 +14,7 @@
 
     <TextView
         android:id="@+id/image_dropdown_title"
+        style="?android:attr/titleTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
