--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -203,4 +203,12 @@
     <!-- Tablet Room Rate More Info button -->
     <color name="tablet_room_rate_more_info_pressed">#20000000</color>
 
+    <!-- Ripped out of ABS -->
+    <color name="abs__background_holo_dark">#ff000000</color>
+    <color name="abs__background_holo_light">#fff3f3f3</color>
+    <color name="abs__bright_foreground_holo_dark">@color/abs__background_holo_light</color>
+    <color name="abs__bright_foreground_holo_light">@color/abs__background_holo_dark</color>
+    <color name="abs__bright_foreground_disabled_holo_dark">#ff4c4c4c</color>
+    <color name="abs__bright_foreground_disabled_holo_light">#ffb2b2b2</color>
+
 </resources>
