2751: Fixed height and alignment of trip bucket cards

--- a/project/res/layout/activity_tablet_results.xml
+++ b/project/res/layout/activity_tablet_results.xml
@@ -14,7 +14,7 @@
     <!-- TRIP BUCKET -->
     <com.expedia.bookings.widget.FixedTranslationFrameLayout
         android:id="@+id/trip_bucket_container"
-        android:background="#CFCFCF"
+        android:background="#dbdada"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
