--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -3,6 +3,8 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/hotel_flight_card_padding_y"
+    android:layout_marginBottom="@dimen/hotel_flight_card_padding_y"
     android:orientation="vertical" >
 
     <FrameLayout
