Added better hotel / flight / tripbucket card dimensions on N10

--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -45,9 +45,10 @@
     <!-- Tablet User review dimens -->
     <dimen name="user_review_text_padding_right">32dp</dimen>
 
-    <!-- Tablet trip bucket dimens -->
+    <!-- Hotel/Flight/Tripbucket Card dimensions -->
     <dimen name="hotel_flight_card_height">120dp</dimen>
     <dimen name="hotel_flight_card_height_with_padding">132dp</dimen>
+    <dimen name="hotel_flight_card_width">352dp</dimen>
     <dimen name="hotel_flight_card_padding_x">12dp</dimen>
     <dimen name="hotel_flight_card_padding_y">6dp</dimen>
     <dimen name="tripbucket_bookbutton_height">40dp</dimen>
