Changed trip bucket background to gray

--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -179,6 +179,7 @@
     <color name="hotel_room_rate_select_room_button_pressed">#0d3861</color>
     <color name="hotel_room_rate_add_room_button">#e4822a</color>
     <color name="hotel_room_rate_add_room_button_pressed">#ab601f</color>
+    <color name="trip_bucket_background_color">#dbdada</color>
 
     <!-- Tablet flights -->
     <color name="tablet_flight_filter_text_color">#4c5156</color>
