--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/trip_bucket_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#40000000"
+                android:background="@color/trip_bucket_background_color"
                 android:orientation="vertical"
                 android:paddingBottom="8dp"
                 android:paddingLeft="24dp"
