--- a/project/res/layout/fragment_flight_search_params.xml
+++ b/project/res/layout/fragment_flight_search_params.xml
@@ -210,15 +210,16 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="vertical"
                     android:baselineAligned="false"
                     android:gravity="left|top"
                     android:weightSum="100">
 
                     <LinearLayout
-                        android:layout_width="0px"
-                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_weight="50"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <include
                             android:id="@+id/child_1_age_layout"
@@ -232,10 +233,10 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="0px"
-                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_weight="50"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <include
                             android:id="@+id/child_3_age_layout"
