--- a/project/res/layout/section_hotel_summary_tablet.xml
+++ b/project/res/layout/section_hotel_summary_tablet.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/hotel_flight_card_padding_y"
     android:paddingLeft="@dimen/hotel_flight_card_padding_x"
     android:paddingRight="@dimen/hotel_flight_card_padding_x"
-    android:paddingTop="@dimen/hotel_flight_card_padding_y" >
+    android:paddingTop="@dimen/hotel_flight_card_padding_y"
     app:priceTextColor="?attr/hotelPriceStandardColor"
     app:salePriceTextColor="?attr/hotelPriceSaleColor">
 
