Cleaned up some trip bucket views

--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -24,6 +24,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_gravity="top"
+            android:background="@drawable/card_corners_top_gray"/>
+
+        <View
+            android:id="@+id/card_corners_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/card_corners_bottom_gray"/>
+
     </FrameLayout>
 
     <FrameLayout
