--- a/project/res/layout/tablet_card_tripbucket.xml
+++ b/project/res/layout/tablet_card_tripbucket.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/hotel_flight_card_height">
@@ -8,29 +8,63 @@
         android:id="@+id/tripbucket_card_background_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter" />
+        android:scaleType="fitCenter"/>
 
     <LinearLayout
+        android:id="@+id/book_button_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="42dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="18dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:background="@drawable/bg_btn_trip_bucket_book_now"
+        android:orientation="horizontal">
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/book_button_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/ic_book_bucket_arrow"
+            android:drawablePadding="10dp"
+            android:gravity="left|center_vertical"
+            android:textColor="#FFDB4C"
+            android:textSize="18sp"
+            app:textStyle="medium"/>
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/trip_bucket_price_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:gravity="right|center_vertical"
+            android:textColor="@android:color/white"
+            android:textSize="21sp"
+            app:textStyle="bold"/>
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/book_button_container"
+        android:layout_alignParentTop="true">
 
         <ImageView
             android:id="@+id/booking_complete_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="22dp"
             android:background="@drawable/ic_booking_complete_check"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <LinearLayout
             android:id="@+id/name_and_trip_duration_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:gravity="center"
             android:orientation="vertical">
 
             <com.expedia.bookings.widget.TextView
@@ -42,7 +76,7 @@
                 android:singleLine="true"
                 android:textColor="#ffffff"
                 android:textSize="16sp"
-                app:textStyle="medium" />
+                app:textStyle="medium"/>
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/trip_duration_text_view"
@@ -53,60 +87,9 @@
                 android:singleLine="true"
                 android:textColor="#ffffff"
                 android:textSize="16sp"
-                app:textStyle="light" />
+                app:textStyle="light"/>
 
         </LinearLayout>
+    </FrameLayout>
 
-        <LinearLayout
-            android:id="@+id/book_button_container"
-            android:layout_width="match_parent"
-            android:layout_height="42dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginBottom="12dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="12dp"
-            android:background="#66000000"
-            android:orientation="horizontal">
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/book_button_text"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_book_bucket_arrow"
-                android:drawablePadding="10dp"
-                android:gravity="left|center_vertical"
-                android:textColor="#FFDB4C"
-                android:textSize="18sp"
-                app:textStyle="medium" />
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/trip_bucket_price_text"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:gravity="right|center_vertical"
-                android:textColor="@android:color/white"
-                android:textSize="21sp"
-                app:textStyle="bold" />
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_gravity="top"
-        android:background="@drawable/card_corners_top_white" />
-
-    <View
-        android:id="@+id/card_corners_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="6dp"
-        android:layout_gravity="bottom"
-        android:background="@drawable/card_corners_bottom_white" />
-
-</FrameLayout>
+</RelativeLayout>
