--- a/project/res/layout/section_flight_leg_tablet_blue_card_checked.xml
+++ b/project/res/layout/section_flight_leg_tablet_blue_card_checked.xml
@@ -2,25 +2,28 @@
 <com.expedia.bookings.section.FlightLegSummarySectionTablet xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/hotel_flight_card_height"
+    android:layout_height="@dimen/hotel_flight_card_height_with_padding"
     android:background="@drawable/bg_flight_summary_row_tablet"
-    android:paddingBottom="6dp"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp"
-    android:paddingTop="6dp" >
+    android:paddingBottom="@dimen/hotel_flight_card_padding_y"
+    android:paddingLeft="@dimen/hotel_flight_card_padding_x"
+    android:paddingRight="@dimen/hotel_flight_card_padding_x"
+    android:paddingTop="@dimen/hotel_flight_card_padding_y">
 
     <LinearLayout
+        android:id="@+id/flight_card_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_margin="12dp"
-        android:orientation="horizontal" >
+        android:layout_marginBottom="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/flight_time_text_view"
@@ -42,7 +45,7 @@
                 android:drawablePadding="@dimen/tablet_flight_list_baggage_fee_icon_padding"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/tablet_result_row_secondary_text_size"
-                app:textStyle="light"/>
+                app:textStyle="light" />
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/operating_carrier_text_view"
@@ -65,21 +68,45 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_confirmation_checkmark_light" />
+
     </LinearLayout>
 
-    <com.expedia.bookings.widget.FlightTripView
-        android:id="@+id/flight_trip_view"
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/flight_card_details"
+        android:layout_alignParentTop="true">
+
+        <com.expedia.bookings.widget.FlightTripView
+            android:id="@+id/flight_trip_view"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="center"
+            app:flightLineColor="#ffffff"
+            app:waypointTextColor="@color/tablet_flight_trip_view_airport_text_color"
+            app:waypointTextSize="@dimen/tablet_result_row_secondary_text_size"
+            app:waypointTextTopMargin="4dp"
+            app:waypointTextTypeface="medium" />
+
+    </FrameLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        app:flightLineColor="#ffffff"
-        app:waypointTextColor="@color/tablet_flight_trip_view_airport_text_color"
-        app:waypointTextSize="@dimen/tablet_result_row_secondary_text_size"
-        app:waypointTextTopMargin="4dp"
-        app:waypointTextTypeface="medium"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/card_corners_top_white" />
+
+    <View
+        android:id="@+id/card_corners_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/card_corners_bottom_white" />
 
 </com.expedia.bookings.section.FlightLegSummarySectionTablet>
