--- a/project/res/layout/fragment_flight_search_params.xml
+++ b/project/res/layout/fragment_flight_search_params.xml
@@ -216,7 +216,7 @@
                     android:weightSum="100">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="50"
                         android:orientation="horizontal">
@@ -233,7 +233,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="50"
                         android:orientation="horizontal">
