--- a/project/res/layout/include_child_age_selectors.xml
+++ b/project/res/layout/include_child_age_selectors.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
         android:gravity="center_horizontal"
