--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.FrameLayoutTouchController xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#454235">
 
-    <com.expedia.bookings.widget.FrameLayoutTouchController
+    <FrameLayout
         android:id="@+id/blurred_dest_image_overlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -131,4 +131,4 @@
             </FrameLayout>
         </FrameLayout>
     </LinearLayout>
-</FrameLayout>
+</com.expedia.bookings.widget.FrameLayoutTouchController>
